fix search icon contrast in dark mode

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -123,3 +123,11 @@ blockquote {
   background-clip: text;
   text-shadow: var(--text-shadow-2);
 }
+
+.only--on-light {
+  display: none;
+}
+
+.only--on-dark {
+  display: initial;
+}
